# exodapt_robot_perception

./: .gitignore  README.md  pyproject.toml  requirements.txt
ros2_ws/: run_colcon_build.sh
ros2_ws/src/asr/: README.md  package.xml  setup.py
ros2_ws/src/asr/asr/: azure_asr.py  multi_azure_asr.py
ros2_ws/src/asr/launch/: azure_asr_launch.xml  multi_azure_asr_launch.xml
ros2_ws/src/keyboard_input/: README.md  package.xml  setup.py
ros2_ws/src/keyboard_input/keyboard_input/: keyboard_input.py
